Run forst 3 Models (ols, lasso, RF)

--- a/Essing Machine Learning Assignment 2.ipynb
+++ b/Essing Machine Learning Assignment 2.ipynb
@@ -585,8 +585,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "7b401703-8868-48c9-ba15-0e539f1543ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set shape: (22992, 20)\n",
+      "Testing set shape: (5749, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Define the feature columns; adjust this list if needed\n",
+    "features = [\n",
+    "    'accommodates', 'bedrooms', 'bathrooms', 'beds', \n",
+    "    'minimum_nights', 'maximum_nights', 'review_scores_rating', \n",
+    "    'latitude', 'longitude', \n",
+    "    'amenity_air_conditioning', 'amenity_wifi', 'amenity_kitchen', \n",
+    "    'amenity_heating', 'amenity_washer', 'amenity_dryer', \n",
+    "    'amenity_tv', 'amenity_cable_tv', 'amenity_free_parking_on_premises', \n",
+    "    'amenity_pool', 'amenity_hot_water'\n",
+    "]\n",
+    "\n",
+    "# Target variable: cleaned price\n",
+    "target = 'price_clean'\n",
+    "\n",
+    "# Create X (features) and y (target)\n",
+    "X = df[features]\n",
+    "y = df[target]\n",
+    "\n",
+    "# Split the dataset: 80% training, 20% testing\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "print(\"Training set shape:\", X_train.shape)\n",
+    "print(\"Testing set shape:\", X_test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e17d8631-963d-4229-bc83-4d4a401852c6",
+   "metadata": {},
+   "source": [
+    "# OLS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "92e9676f-41fe-44ad-874f-b9e28615dd0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OLS RMSE: 568.8955789553082\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Build and train the OLS model\n",
+    "ols = LinearRegression()\n",
+    "ols.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "ols_pred = ols.predict(X_test)\n",
+    "\n",
+    "# Calculate RMSE for the OLS model\n",
+    "ols_rmse = np.sqrt(mean_squared_error(y_test, ols_pred))\n",
+    "print(\"OLS RMSE:\", ols_rmse)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47206fd7-23b0-4f19-a984-cd15634f19cc",
+   "metadata": {},
+   "source": [
+    "# LASSO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "8b80772c-5398-4aa3-a8fa-3e75155ef2be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LASSO RMSE: 575.5983412599571\n",
+      "LASSO training and prediction time: 0.17334723472595215\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LassoCV\n",
+    "import time\n",
+    "\n",
+    "# Start timer for training and prediction\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Instantiate and train LASSO with 5-fold cross-validation\n",
+    "lasso = LassoCV(cv=5, random_state=42)\n",
+    "lasso.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "lasso_pred = lasso.predict(X_test)\n",
+    "\n",
+    "# Calculate RMSE\n",
+    "lasso_rmse = np.sqrt(mean_squared_error(y_test, lasso_pred))\n",
+    "lasso_time = time.time() - start_time\n",
+    "\n",
+    "print(\"LASSO RMSE:\", lasso_rmse)\n",
+    "print(\"LASSO training and prediction time:\", lasso_time)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1bc8b99-599d-4afd-93c1-607efef9ac61",
+   "metadata": {},
+   "source": [
+    "# Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "3bfb2fe1-8bfa-4480-aaa0-011ace4c4b52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest RMSE: 437.7337496344987\n",
+      "Random Forest training and prediction time: 10.11430811882019\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Start timer for Random Forest training and prediction\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Instantiate the Random Forest Regressor (using 100 trees as a starting point)\n",
+    "rf = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "rf_pred = rf.predict(X_test)\n",
+    "\n",
+    "# Calculate RMSE for the Random Forest model\n",
+    "rf_rmse = np.sqrt(mean_squared_error(y_test, rf_pred))\n",
+    "rf_time = time.time() - start_time\n",
+    "\n",
+    "print(\"Random Forest RMSE:\", rf_rmse)\n",
+    "print(\"Random Forest training and prediction time:\", rf_time)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ffd07cb-0ca0-43aa-9d39-f80f23fb1f48",
    "metadata": {},
    "outputs": [],
    "source": []
